--- a/index.Rmd
+++ b/index.Rmd
@@ -4,11 +4,10 @@ author: "Kjettil Evers"
 date: "`r Sys.Date()`"
 site: "bookdown::bookdown_site"
 documentclass: book
-bibliography: ["book.bib", "packages.bib"]
+bibliography: ["book.bib", "packages.bib",'`r rbbt::bbt_write_bib("data/opdracht5/bibliography.json", overwrite = TRUE)`']
 biblio-style: apalike
 link-citations: yes
 new_session: yes
-before_body: "Kjettil-Evers2.pdf"
 ---
 
 # Welkom in mijn portfolio
