--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "Kjettil Evers"
 date: "`r Sys.Date()`"
 site: "bookdown::bookdown_site"
 documentclass: book
-bibliography: ['`r rbbt::bbt_write_bib("data/opdracht5/bibliography.json", overwrite = TRUE)`']
+bibliography: ["bibliography.bib"]
 biblio-style: apalike
 link-citations: yes
 new_session: yes
@@ -17,7 +17,7 @@ My name is Kjettil Evers and my portfolio is a representation of all that I've l
 This portfolio showcases my skills in different subjects using Rmarkdown and more!
 each chapter contains a exercise that shows how i executed the exercise step by step. It also gives a view it shows the perspective of how I approached my assignments and why I made certain choices. 
 
-All files in this bookdown are available in my [github](https://github.com/kjettil/kjettil.github.io)
+All files in this bookdown are available at my [github](https://github.com/kjettil/kjettil.github.io)
 
 
 
