--- a/002_looking_ahead.Rmd
+++ b/002_looking_ahead.Rmd
@@ -1,5 +1,5 @@
 # looking ahead
-In this exercise is about what I want to do with my free school time this semester. This is done by answering a few questions. 
+This exercise is about what I want to do with my free school time this semester. This is done by answering a few questions. 
 
 **The first question was where I see myself in ~2 years**
 
